# DarwinOp-Robocup2015

./: README.md  instructionsForLUT.txt~  instructionsForLUT.txt~.orig  sendLocalizationInfoInstructions.txt
Lib/: Makefile.am  investigate.txt
Lib/Firmware/rs485interruptcode/: main.elf  main.hex
Lib/Modules/Comm/: Makefile.local  localComm.cpp  luaComm.cpp  luaComm.cpp.orig
Lib/Modules/ImageProc/: Makefile.local  lua_ImageProc.cpp  lua_ImageProc.h  lua_connect_regions.cpp  test_imageproc.lua
Lib/Modules/MyComm/: localComm.cpp  makeit.sh
Lib/Modules/Util/: Makefile
Lib/Modules/Util/CUtil/: Makefile  lua_cutil.cpp  ta2s.lua  test_cutil.lua
Lib/Modules/Util/Jpeg/: Makefile
Lib/Modules/Util/Shm/: Makefile  lua_shm.cpp  lua_shm.cpp_back
Lib/Modules/Util/Unix/: Makefile  test_unix.lua
Lib/Modules/Util/Z/: Makefile
Lib/Modules/Webots/Controller/: Makefile  lua_set.sh  start.lua
Lib/Modules/xbox/: test_360.lua
Lib/Platform/NaoV4/: Makefile
Lib/Platform/NaoV4/Body/: NaoBody.lua
Lib/Platform/NaoV4/Camera/: nao_cam_mmap_thread.cc  test.lua
Lib/Platform/NaoV4/GameControl/: Makefile  NaoGameControl.lua
Lib/Platform/NaoV4/NaoQi/: Makefile  nao_init.lua
Lib/Platform/NaoV4/NaoQi/src/: dcmprocess.cpp
Lib/Platform/OP/Body/Dynamixel/: changeID.lua
Lib/Platform/OP/Camera/: calibrate.c  easysocket.c  easysocket.h  easysocket.h.gch  lua_OPCam.cpp  v4l2.cpp
Lib/Platform/OP/GameControl/: OPGameControl.lua
Lib/Platform/WebotsNao/Body/: NaoWebotsBody.lua
Lib/Platform/WebotsOP/Body/: WebotsOPBody.lua
Lib/Platform/WebotsOP/Camera/: WebotsOPCam.lua
Lib/Platform/XOS/Body/: XOSBody.lua  check_dcm.lua
Lib/Platform/XOS/GameControl/: XOSGameControl.lua
Player/: .Assignment3_2lua.swp  .Assignment3_5.lua.swp  .helloRobotHFA.lua.swp  .hoard_connection.lua.swo  .hoard_connection.lua.swp  .hoard_functions.lua.swp  .startupscript.sh.swp  :wq  Assignment3_4.lua  Assignment3_4_a.lua  Assignment3_5.lua  Assignment3_5.lua~  CameraCleanup.lua  CameraCleanup.txt  CameraDied.sh  KITTYLOG.txt  buttons.sh  camera_grab.lua  cognition.lua  dcmlog.txt  fullGameHFA.lua  gmu_buttonslog.txt  helloRobotHFA.lua  hfa.lua  hfaDriver.lua  hoard_connection.lua  hoard_connection_stats.txt  hoard_features.lua  hoard_functions.lua  hoard_motion.lua  horde_server.lua  hordesoccer.txt  init.lua  kickOutput.txt  lut_demoOP.raw  output.txt  p3p1.lua  p3p2.lua  p3p4.lua  proj3.lua  (+18 more)
Player/Config/: Config.lua  Config_NaoV4.lua  Config_OP.lua  Config_WebotsNao.lua  Config_WebotsOP.lua  \  calibration.lua  playerNum.lua  playerRole.lua
Player/Data/: 12192013.raw  3_14_lut.raw  HallwayCalibrate.raw  JAN20ROBOT52.raw  May24th.raw  alldone.raw  backupApril6  backuplut2.raw  best.raw  done.raw  good_lut.raw  good_lut_demoOP.raw  goodlights.raw  jan12_drew.raw  jan3rd.raw  late10pm21st.raw  late8pm.raw  lut_0811_L512_5PM.raw  lut_0811_L512_5PM.raw.orig  lut_0811_L512_5PM.raw.orig.orig  lut_demoNao.raw  lut_demoOP.raw  lut_demoOP.raw.orig  lut_demoOP.raw_bak  lut_demoOP_51.raw  lut_demoOP_53.raw  lut_demoOP_53bk.raw  lut_demoOP_sample_field.raw  lut_webots_new2.raw  onlygreen.raw  slowcircle.raw  sunmorning.raw  (+1 more)
(+243 files in other folders)
